我想删掉这一行这是practice页面的主页，然后又重置

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>这是practice页面的主页</h1>
+    <h1>我想删掉这一行‘这是practice页面的主页’，然后又重置</h1>
 </body>
 </html>
